<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateModuleOldActivity" >

    <Button
        android:id="@+id/buttonCheckUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUpdText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/butt_check_update" />

    <TextView
        android:id="@+id/textViewUpdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/text_check_update" />

    <TextView
        android:id="@+id/textViewNoNewVersionDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCheckUpdate"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/text_update_db_not_avaliable" />

    <TextView
        android:id="@+id/textViewUpdateAvaiable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewNoNewVersionDB"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:text="@string/text_update_avaliable"
        android:textColor="@color/blue"
        android:textSize="16dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonUpdateDB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUpdateAvaiable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/butt_updatedb" />

</RelativeLayout>