<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".UpdateModuleActivity2" >
 
    <TextView
        android:id="@+id/textViewUpdText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/text_check_update2" />

    <Button
        android:id="@+id/buttUpdateShedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUpdTextShed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/butt_update_schedule" />

    <TextView
        android:id="@+id/textViewUpdTextShed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewUpdText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:gravity="center_horizontal"
        android:text="@string/ok" />

    <TextView
        android:id="@+id/textViewUpdTextUpdOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttUpdateShedule"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp"
        android:gravity="center_horizontal"
        android:text="@string/text_updated_success"
        android:textColor="@color/blue" />
    
</RelativeLayout>