<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
                android:layout_margin="@dimen/activity_horizontal_margin" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:id="@+id/textViewRouteText"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="6dp"
                    android:gravity="left|center_vertical"
                    android:height="26dp"
                    android:text="@string/strDefRoute"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewRoute"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right|center_vertical"
                    android:height="26dp"
                    android:text="@string/ok"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/buttonRoutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:onClick="onclick"
            android:text="@string/strButtCheckRoute" />

        <TextView
            android:id="@+id/textViewCaptionStations"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="fill_vertical|center_horizontal"
            android:height="26dp"
            android:text="@string/settingsCaptionStations"
            android:textSize="18sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:measureWithLargestChild="false" >

                <TextView
                    android:id="@+id/textViewStations1Text"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="6dp"
                    android:gravity="fill_vertical|fill"
                    android:height="26dp"
                    android:text="@string/strDefStation1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewStations1"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right|center_vertical"
                    android:height="26dp"
                    android:text="@string/ok"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/buttonStations1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/strButtCheckStations" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1" >

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/textViewStations2Text"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    android:layout_gravity="left|center_vertical"
                    android:layout_marginLeft="6dp"
                    android:gravity="left|center_vertical"
                    android:height="26dp"
                    android:text="@string/strDefStation2"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewStations2"
                    android:layout_height="45dp"
                    android:layout_marginRight="10dp"
                    android:gravity="right|center_vertical"
                    android:height="26dp"
                    android:text="@string/ok"
                    android:textSize="18sp" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/buttonStations2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/strButtCheckStations" />

        <CheckBox
            android:id="@+id/SettingsCheckBox1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="left|center_vertical"
            android:gravity="center_vertical"
            android:text="@string/strCheckReverse" />

        <Button
            android:id="@+id/buttonGoCheckUpdates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onclick"
            android:text="@string/strButtGoCheckUpdates" />
        
       </LinearLayout>

</ScrollView>