<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AboutActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:clickable="false"
        android:longClickable="false"
        android:contentDescription="@string/about_image_icon"
        android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/textViewVersionProgram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:text="@string/ok" />

        <TextView
            android:id="@+id/textViewUpdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVersionProgram"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="top|left"
            android:scrollHorizontally="false"
            android:text="@string/about_string"
            android:textSize="18sp" />

</RelativeLayout>